@@ -1,0 +1,77 @@
+.. This may look like plain text, but really is -*- rst -*-
+
+====================================
+pyFormex User Meeting 4 (2008-09-12)
+====================================
+
+Place and Date
+--------------
+These are the minutes of the pyFormex User Meeting of Friday September 12, 2008, at the Institute Biomedical Technology (IBiTech) of Ghent University, Belgium.
+
+Participants
+------------
+The following pyFormex developers, users and enthusiants were present.
+
+- Benedict Verhegghe, `pyFormex project manager`_ and chairman of the meeting,
+- Matthieu De Beule,
+- Peter Mortier,
+- Sofie Van Cauter,
+- Gianluca De Santis.
+
+Apologies
+---------
+
+
+Minutes of the previous meeting
+-------------------------------
+
+
+Agenda and discussion
+---------------------
+* pyFormex Developer Forum:
+
+  - Copyright of the Open Source Project  
+  - Demonstration of the new SuperShape transformation
+  - Running pyFormex from a BuMPix Live Linux USB key
+  - Setting keywords on example scripts
+  - Input Dialog:
+
+    + Non-modal dialogs (see SuperShape example)
+    + Programmatic update of the contents of an input widget (unfinished!)
+    + Slider input widget (see Lighting example)
+
+
+* pyFormex User Forum:
+
+   - Gianluca: Importing Philips Medical Systems wrl files into pyFormex
+   - Victor: Using Bezier curves to create geometry of a patch
+
+
+* Discussion: Should pyFormex become a 'managed' project?
+
+
+
+Date of the next meeting
+------------------------
+The next meeting will be held at IBiTech on Friday, Oct 18, 2008 at 10.00h.
+
+
+.. Here are the targets referenced in the text
+
+.. _`pyFormex website`: http://pyformex.berlios.de/
+.. _`pyFormex home page`: http://pyformex.berlios.de/
+.. _`pyFormex user meeting page`: http://pyformex.berlios.de/usermeeting.html
+.. _`pyFormex developer site`: http://developer.berlios.de/projects/pyformex/
+.. _`pyFormex forums`: http://developer.berlios.de/forum/?group_id=2717
+.. _`pyFormex developer forum`: https://developer.berlios.de/forum/forum.php?forum_id=8349
+.. _`pyFormex bug tracking`: http://developer.berlios.de/bugs/?group_id=2717
+.. _`pyFormex project manager`: mailto:benedict.verhegghe@ugent.be
+.. _`UGent digital learning`: https://minerva.ugent.be/main/ssl/login_en.php
+.. _`pyFormex news`: http://developer.berlios.de/news/?group_id=2717
+.. _`pyformex-announce`: http://developer.berlios.de/mail/?group_id=2717
+.. _`IBiTech`: http://www.ibitech.ugent.be/
+
+.. The following directive makes sure the targets are included in footnotes.
+
+.. target-notes::
+
